name:          shlurp
version:       0.1
build-type:    Simple
cabal-version: >=1.10

library
  build-depends: base, time, ghc, safe
  ghc-options: -Wall
  hs-source-dirs: lib
  exposed-modules: Shlurp
  default-language: Haskell2010

test-suite tests
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test
  ghc-options: -Wall
  build-depends: base, HUnit, shlurp, time
  default-language: Haskell2010

executable xshlurp
  hs-source-dirs: bin
  main-is: Main.hs
  build-depends: base, shlurp, time,
                 extra,
                 X11 == 1.10.2.9
  default-language: Haskell2010
